istio.yml
apiVersion: v1
kind: Service
metadata:
  name: transaction-svc
  labels:
    app: transaction-svc
    service: transaction-svc
spec:
  ports:
    - port: 8082
      name: http
  selector:
    app: transaction-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-svc
  labels:
    app: transaction-svc
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
      maxSurge: "20%"
      maxUnavailable: "10%"
      pre: {}
      post: {}
  selector:
    matchLabels:
      app: transaction-svc
      version: v1
  template:
    metadata:
      labels:
        app: transaction-svc
        version: v1
    spec:
      serviceAccountName: sa-transaction-svc
      containers:
        - name: transaction-svc
          image: 172.30.1.1:5000/workshop/transaction-svc:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - transaction-svc
        from:
          kind: Image
          name: 172.30.1.1:5000/workshop/transaction-svc:0.0.1-SNAPSHOT
          namespace: workshop
      type: ImageChange
    - type: ConfigChange
