virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-svc
spec:
  hosts:
    - transaction-svc
  http:
    - route:
        - destination:
            host: transaction-svc
            subset: v1
          weight: 50
        - destination:
            host: transaction-svc-v2
            subset: v2
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transaction-svc
spec:
  host: transaction-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
